2009-09-29  Miguel de Icaza  <miguel@novell.com>

	* HttpUtility.cs: Do not use CAS Attributes when using MonoTouch.

	Remove unnecesasry using clause.

2009-09-29  Marek Habersack  <mhabersack@novell.com>

	* HttpResponse.cs: use full url in redirect if
	UseFullyQualifiedRedirectUrl is set to true in httpRuntime
	configuration section. Patch from Brett Kiefer
	<brett@fogcreek.com>, thanks! Fixes bug #542846

2009-09-28  Marek Habersack  <mhabersack@novell.com>

	* HttpContext.cs: GetResourceProvider - renamed the 'key' argument
	to 'virtualPath' in order to reflects its purpose better. Local
	resource providers are created for the passed virtualPath and not
	for the current request's path. Fixes bug #542484

2009-09-25  Marek Habersack  <mhabersack@novell.com>

	* StaticSiteMapProvider.cs: MapUrl must normalize paths. Fixes bug
	#541969

	* XmlSiteMapProvider.cs: siteMapFile parameter must be mapped in
	Initialize. Fixes bug #541969

2009-09-24  Marek Habersack  <mhabersack@novell.com>

	* XmlSiteMapProvider.cs: added "securityTrimmingEnabled" to the
	list of supported attributes in Initialize. Fixes bug #541607

2009-09-07  Marek Habersack  <mhabersack@novell.com>

	* HttpContext.cs: when creating local resource provider, pass the
	current file's virtual path to CreateLocalResourceProvider. Fixes
	bug #536757

	* XmlSiteMapProvider.cs: do not allow the provider to be
	intialized more than once.
	Initialize throws if it finds unknown attributes in the
	'attributes' collection.
	AddNode checks its arguments and throws if they are null or aren't
	from the same provider.
	FindStartingNode throws exceptions in several erroneous situations
	now.
	Added private method GetConfigDocument which performs several
	checks on the source .sitemap file and throws exceptions if it
	finds any errors.
	BuildSiteMap clears provider state before building the map.
	BuildSiteMapRecursive correctly deals with custom providers. Fixes
	bug #465696