@@ -1,3 +1,7 @@
+2009-10-07  Marek Habersack  <mhabersack@novell.com>
+
+	* TraceData.cs: make long execution times stand out.
+
 2009-09-29  Miguel de Icaza  <miguel@novell.com>
 
 	* HttpUtility.cs: Do not use CAS Attributes when using MonoTouch.
